# rest_ecommerce

./: .gitignore  README.md  docker-compose-local.yml  docker-compose.local.yml  docker-compose.yml  main.py  requirements.txt
app/: pyproject.toml
app/config/: __init__.py  base.py
backend/: config_example.ini  ini_example  pyproject.toml
backend/app/: conftest.py  create_config_files.py  initial_data.py  main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 4c2b6e809d29_added_roles_table.py  7cf1308e376d_alter_email_colum.py  c28444213f05_added_users_domain_tables_users_user_.py
backend/app/api/: dependencies.py  router.py
backend/app/api/endpoints/: auth.py
backend/app/api/endpoints/tests/: test_register.py
backend/app/core/: app_factory.py  celery_app.py  security.py
backend/app/core/config/: __init__.py  base.py
backend/app/core/rate_limiter/: __init__.py  exceptions.py  rate_limiter.py  rate_limiter_manager.py  utils.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/exceptions/: __init__.py
backend/app/models/request_models/: register_form.py
backend/app/models/response_models/: __init__.py  error_response.py  register_response.py  token.py  token_response.py
backend/app/models/tests/: test_error_response.py  test_register_form.py  test_register_response.py  test_token.py  test_token_model.py  test_token_response.py  test_user_out.py
backend/app/models/token/: __init__.py  scope_model.py  token_model.py
backend/app/models/user/: __init__.py  user_out.py
backend/app/schemas/: __init__.py  soft_delete_mixin.py  user.py
backend/app/security/: __init__.py  ip_security_manager.py
backend/app/security/tests/: test_ip_security_manager.py
backend/app/services/: auth_service.py  tasks.py  user_service.py
backend/app/services/auth_service/: __init__.py  auth_service.py  jwt_handler.py  token_factory.py  token_utils.py
backend/app/services/jwt_service/: exceptions.py  jwt_handler.py  token_factory.py  token_repository.py  token_utils.py
backend/app/services/user_service/: user_service.py
compose/production/fastapi/: .fastapi  Dockerfile  entrypoint  start
compose/production/fastapi/celery/beat/: start
compose/production/fastapi/celery/worker/: start
docs/: models.md
docs/business_logic/: sequence_diagrams.md
docs/models/: data_models.md  models.md  request_models.md
docs/schemas/: schemas.md
